# zoey

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
agent/: AGENTS.md  HEARTBEAT.md  SOUL.md
docs/: architecture.md  heartbeat-loop.md  index.html  memory-model.md  script.js  style.css
tests/: test_smoke.py
zoey/: __init__.py  __main__.py  actions.py  agent.py  cli.py  config.py  prompt.py  providers.py  workspace.py
zoey/template/: BOOTSTRAP.md  IDENTITY.md  TOOLS.md  USER.md
